flux/base/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  labels:
    app.kubernetes.io/name: app
spec:
  ingressClassName: nginx
  rules: []
